tests/correct/printCharInput.tpc
void main(void){
	char c;
	readc(c);
	print(c);
}