tests/error/variableRedefined.tpc
int main(void){
	int var;
	char var;
	return 0;
}